--- a/src/app/componentes/definicion-formularios/definicion-formularios.component.scss
+++ b/src/app/componentes/definicion-formularios/definicion-formularios.component.scss
@@ -2,52 +2,82 @@
     border: 1px solid #ccc;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     max-width: 500px;
     margin: auto;
     text-align: center;
-}
-
-h2 {
+  }
+  
+  h2 {
     font-size: 1.5em;
     margin-bottom: 20px;
-}
-
-.form-group {
+  }
+  
+  .form-group {
     margin-bottom: 20px;
     text-align: left;
-}
-
-label {
+  }
+  
+  label {
     display: block;
     margin-bottom: 5px;
-}
-
-.form-control {
+  }
+  
+  .form-control {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
-}
-
-.form-viewer {
+  }
+  
+  .form-viewer {
     border: 1px solid #ccc;
     height: 100px;
     margin-bottom: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.btn {
+  }
+  
+  .processes-grid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 10px;
+  
+    .process-card {
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      cursor: pointer;
+      transition: border-color 0.3s;
+  
+      mat-icon {
+        font-size: 24px;
+      }
+  
+      &.selected {
+        border-color: green;
+  
+        .check-icon {
+          color: green;
+        }
+      }
+    }
+  }
+  
+  .btn {
     padding: 10px 20px;
     background-color: #007bff;
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-}
-
-.btn:hover {
-    background-color: #0056b3;
-}
+  
+    &:hover {
+      background-color: #0056b3;
+    }
+  }
+  
