--- a/src/app/components/definir-escalas/definir-escalas.component.scss
+++ b/src/app/components/definir-escalas/definir-escalas.component.scss
@@ -1,91 +1,179 @@
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .form-container {
-    border: 1px solid #ccc;
+    border: 1px solid var(--md-primary-300);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     max-width: 600px;
-    margin: auto;
+    margin: 20px auto;
     text-align: center;
   
     h2 {
-      font-size: 1.5em;
-      margin-bottom: 20px;
+        font-size: 1.5em;
+        margin-bottom: 20px;
+        color: var(--md-primary-700);
     }
   
     .form-group {
-      margin-bottom: 20px;
-      text-align: left;
+        margin-bottom: 20px;
+        text-align: left;
   
-      label {
-        display: block;
-        margin-bottom: 5px;
-      }
+        label {
+            display: block;
+            margin-bottom: 5px;
+            color: var(--md-primary-600);
+        }
   
-      select, textarea {
-        width: 100%;
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-      }
+        select, textarea, input {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid var(--md-primary-200);
+            border-radius: 4px;
+            background-color: var(--md-primary-50);
+        }
   
-      textarea {
-        margin-top: 10px;
-        height: 60px;
-      }
+        textarea {
+            margin-top: 10px;
+            height: 60px;
+        }
     }
   
     .escala-container {
-      margin-top: 20px;
-      text-align: left;
+        margin-top: 20px;
+        text-align: left;
   
-      h3 {
-        background-color: #51d1f6;
-        color: white;
-        padding: 10px;
-        border-radius: 4px;
-        text-align: center;
-      }
-  
-      .escala-list {
-        margin-top: 10px;
-        border: 1px solid #ccc;
-        padding: 10px;
-        border-radius: 4px;
-        background-color: #f9f9f9;
-  
-        .escala-item {
-          display: flex;
-          justify-content: space-between;
-          padding: 5px 0;
-          border-bottom: 1px solid #ddd;
-  
-          &:last-child {
-            border-bottom: none;
-          }
+        h3 {
+            background-color: var(--md-primary-400);
+            color: var(--md-primary-contrast-400);
+            padding: 10px;
+            border-radius: 4px;
+            text-align: center;
+
+            input {
+                width: 100%;
+                border: none;
+                background-color: transparent;
+                color: var(--md-primary-contrast-400);
+                text-align: center;
+                font-size: 1.2em;
+            }
         }
-      }
+  
+        .escala-list {
+            margin-top: 10px;
+            border: 1px solid var(--md-primary-200);
+            padding: 10px;
+            border-radius: 4px;
+            background-color: var(--md-primary-50);
+  
+            .escala-item {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 5px 0;
+                border-bottom: 1px solid var(--md-primary-100);
+  
+                &:last-child {
+                    border-bottom: none;
+                }
+  
+                input {
+                    margin-right: 10px;
+                    flex: 1;
+                    background-color: var(--md-primary-50);
+                    border: 1px solid var(--md-primary-200);
+                    max-width: calc(50% - 10px);  // Asegura que el input no sobresalga
+                }
+            }
+        }
     }
   
     .btn {
-      margin-top: 10px;
-      padding: 10px 20px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-  
-      &:hover {
-        background-color: #0056b3;
-      }
-  
-      &.btn-secondary {
-        background-color: #6c757d;
+        margin-top: 10px;
+        padding: 10px 20px;
+        background-color: var(--md-accent-500);
+        color: var(--md-accent-contrast-500);
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
   
         &:hover {
-          background-color: #5a6268;
+            background-color: var(--md-accent-700);
         }
-      }
-    }
-  }
   
+        &.btn-secondary {
+            background-color: var(--md-primary-500);
+  
+            &:hover {
+                background-color: var(--md-primary-700);
+            }
+        }
+    }
+}
+
+.visualizations {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    margin-top: 20px;
+
+    .visualization-container {
+        width: 45%;
+        border: 1px solid var(--md-primary-300);
+        padding: 20px;
+        border-radius: 8px;
+        background-color: var(--md-primary-50);
+        overflow-x: auto;
+        white-space: nowrap;
+
+        h3 {
+            text-align: center;
+        }
+
+        .visualization-content {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        .visualizacion {
+            min-width: 100%;
+            padding: 20px;
+            border: 1px solid var(--md-primary-300);
+            border-radius: 8px;
+            background-color: var(--md-primary-50);
+
+            h3 {
+                input {
+                    width: 100%;
+                    border: none;
+                    background-color: transparent;
+                    text-align: center;
+                    font-size: 1.2em;
+                }
+            }
+
+            table {
+                width: 100%;
+                border-collapse: collapse;
+                margin-top: 10px;
+
+                th, td {
+                    border: 1px solid var(--md-primary-200);
+                    padding: 8px;
+                    text-align: left;
+                    word-wrap: break-word;  // Para que la descripción se adapte a la cuadrícula
+                }
+
+                th {
+                    background-color: var(--md-primary-100);
+                }
+            }
+        }
+    }
+}
