--- a/src/app/components/definir-escalas/definir-escalas.component.html
+++ b/src/app/components/definir-escalas/definir-escalas.component.html
@@ -13,6 +13,7 @@
         <div *ngIf="tipoEscala" class="escala-container">
             <h3>
                 <input [(ngModel)]="tipoEscalaTitulo" placeholder="{{ tipoEscala }} {{ 'definir_escalas.del_seud' | translate }}">
+                <button mat-icon-button class="small-icon"><mat-icon>edit</mat-icon></button>
             </h3>
             <textarea class="form-control" [(ngModel)]="descripcion" placeholder="{{ 'definir_escalas.descripcion' | translate }}"></textarea>
         
@@ -24,11 +25,13 @@
                            [attr.pattern]="tipoEscala === 'cuantitativa' ? '[0-9]*' : '.*'"
                            [attr.maxlength]="tipoEscala === 'cuantitativa' ? '3' : null"
                            (keypress)="tipoEscala === 'cuantitativa' ? restrictNumeric($event) : null">
+                    <button mat-icon-button class="small-icon"><mat-icon>edit</mat-icon></button>
                 </div>
             </div>
         
             <button class="btn btn-secondary" (click)="agregarEscala()">{{ "definir_escalas.agregar_elemento_escala" | translate }}</button>
             <button class="btn" (click)="visualizarEscalas()">{{ "definir_escalas.visualizar" | translate }}</button>
+            <button class="btn btn-primary" (click)="tablasElegidas()">{{ "definir_escalas.elegir" | translate }}</button>
         </div>
     </div>
 
@@ -36,9 +39,10 @@
         <div class="visualization-container cualitativa">
             <h3>Vista tablas cualitativas</h3>
             <div class="visualization-content" *ngIf="visualizacionesCualitativas.length > 0">
-                <div *ngFor="let visualizacion of visualizacionesCualitativas" class="visualizacion">
+                <div *ngFor="let visualizacion of visualizacionesCualitativas" class="visualizacion" [class.selected]="visualizacion.selected" (click)="seleccionarTabla(visualizacion)">
                     <h3>
                         <input [(ngModel)]="visualizacion.tipoEscala" placeholder="Titulo de la escala">
+                        <button mat-icon-button (click)="eliminarVisualizacion(visualizacion, 'cualitativa')"><mat-icon>close</mat-icon></button>
                     </h3>
                     <p>{{ visualizacion.descripcion }}</p>
                     <table>
@@ -62,9 +66,10 @@
         <div class="visualization-container cuantitativa">
             <h3>Vista tablas cuantitativas</h3>
             <div class="visualization-content" *ngIf="visualizacionesCuantitativas.length > 0">
-                <div *ngFor="let visualizacion of visualizacionesCuantitativas" class="visualizacion">
+                <div *ngFor="let visualizacion of visualizacionesCuantitativas" class="visualizacion" [class.selected]="visualizacion.selected" (click)="seleccionarTabla(visualizacion)">
                     <h3>
                         <input [(ngModel)]="visualizacion.tipoEscala" placeholder="Titulo de la escala">
+                        <button mat-icon-button (click)="eliminarVisualizacion(visualizacion, 'cuantitativa')"><mat-icon>close</mat-icon></button>
                     </h3>
                     <p>{{ visualizacion.descripcion }}</p>
                     <table>
