--- a/src/app/components/definir-escalas/definir-escalas.component.scss
+++ b/src/app/components/definir-escalas/definir-escalas.component.scss
@@ -53,6 +53,7 @@
             padding: 10px;
             border-radius: 4px;
             text-align: center;
+            position: relative;
 
             input {
                 width: 100%;
@@ -61,6 +62,13 @@
                 color: var(--md-primary-contrast-400);
                 text-align: center;
                 font-size: 1.2em;
+            }
+
+            button {
+                position: absolute;
+                right: 20px;
+                top: 50%;
+                transform: translateY(-50%);
             }
         }
   
@@ -89,6 +97,10 @@
                     border: 1px solid var(--md-primary-200);
                     max-width: calc(50% - 10px);  // Asegura que el input no sobresalga
                 }
+
+                button {
+                    margin-left: 10px;
+                }
             }
         }
     }
@@ -109,6 +121,15 @@
         &.btn-secondary {
             background-color: var(--md-primary-500);
   
+            &:hover {
+                background-color: var(--md-primary-700);
+            }
+        }
+
+        &.btn-primary {
+            background-color: var(--md-primary-500);
+            margin-left: 10px;
+
             &:hover {
                 background-color: var(--md-primary-700);
             }
@@ -137,8 +158,9 @@
 
         .visualization-content {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             gap: 20px;
+            overflow-x: auto;
         }
 
         .visualizacion {
@@ -147,6 +169,12 @@
             border: 1px solid var(--md-primary-300);
             border-radius: 8px;
             background-color: var(--md-primary-50);
+            position: relative;
+
+            &.selected {
+                border-color: green;
+                background-color: #e0ffe0;
+            }
 
             h3 {
                 input {
@@ -155,6 +183,12 @@
                     background-color: transparent;
                     text-align: center;
                     font-size: 1.2em;
+                }
+
+                button {
+                    position: absolute;
+                    right: 0;
+                    top: 0;
                 }
             }
 
@@ -168,6 +202,9 @@
                     padding: 8px;
                     text-align: left;
                     word-wrap: break-word;  // Para que la descripción se adapte a la cuadrícula
+                    max-width: 200px;  // Asegura que las descripciones no sobresalgan
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
 
                 th {
@@ -175,5 +212,14 @@
                 }
             }
         }
+    }
+}
+
+button.small-icon {
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    mat-icon {
+        font-size: 18px;
     }
 }
