--- a/src/app/components/definicion-formularios/definicion-formularios.component.scss
+++ b/src/app/components/definicion-formularios/definicion-formularios.component.scss
@@ -1,42 +1,50 @@
+@import 'src/assets/styles/palette-angular-material.css';
+
 .form-container {
-    border: 1px solid #ccc;
+    border: 1px solid var(--md-primary-200);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     max-width: 500px;
     margin: auto;
     text-align: center;
+    background-color: var(--md-primary-50);
   }
   
   h2 {
     font-size: 1.5em;
     margin-bottom: 20px;
+    color: var(--md-primary-700);
   }
   
   .form-group {
     margin-bottom: 20px;
     text-align: left;
-  }
+
+    label {
+      display: block;
+      margin-bottom: 5px;
+      color: var(--md-primary-600);
+    }
   
-  label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  .form-control {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    .form-control {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid var(--md-primary-200);
+      border-radius: 4px;
+      background-color: var(--md-primary-50);
+    }
   }
   
   .form-viewer {
-    border: 1px solid #ccc;
+    border: 1px solid var(--md-primary-200);
     height: 100px;
     margin-bottom: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: var(--md-primary-50);
+    color: var(--md-primary-700);
   }
   
   .processes-grid {
@@ -45,7 +53,7 @@
     gap: 10px;
   
     .process-card {
-      border: 1px solid #ccc;
+      border: 1px solid var(--md-primary-200);
       border-radius: 8px;
       padding: 10px;
       display: flex;
@@ -53,13 +61,16 @@
       justify-content: space-between;
       cursor: pointer;
       transition: border-color 0.3s;
+      background-color: var(--md-primary-50);
   
       mat-icon {
         font-size: 24px;
+        color: var(--md-primary-700);
       }
   
       &.selected {
         border-color: green;
+        background-color: var(--md-primary-100);
   
         .check-icon {
           color: green;
@@ -70,14 +81,13 @@
   
   .btn {
     padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
+    background-color: var(--md-primary-500);
+    color: var(--md-primary-contrast-500);
     border: none;
     border-radius: 4px;
     cursor: pointer;
   
     &:hover {
-      background-color: #0056b3;
+      background-color: var(--md-primary-700);
     }
   }
-  
