--- a/src/app/components/metricas/metricas.component.html
+++ b/src/app/components/metricas/metricas.component.html
@@ -1,53 +1,83 @@
-<mat-stepper orientation="vertical" [linear]="isLinear" #stepper>
-    <mat-step [stepControl]="firstFormGroup">
-      <ng-template matStepLabel>{{ 'GLOBAL.metricas' | translate }}</ng-template>
-  
-      <mat-card>
-  
-        <br><br>
-  
-        <mat-card-content>
-          <div class="form-container">
-  
-            <div>
-              <mat-card-subtitle>{{ 'GLOBAL.proyecto_academico' | translate }}</mat-card-subtitle>
-              <mat-form-field [formGroup]="firstFormGroup" style="width: 100%;">
-                <mat-label>{{ 'GLOBAL.proyecto_academico' | translate }}:</mat-label>
-                <mat-select formControlName="validatorProyecto" required>
-                  <mat-option>--{{ 'GLOBAL.seleccionar' | translate }}--</mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-  
+<mat-card>
+    <mat-card-header>
+      <mat-card-title>{{ 'metricas.metricas' | translate }}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-stepper orientation="vertical" [linear]="isLinear" #stepper>
+        <!-- Step 1: Periodo -->
+        <mat-step [stepControl]="firstFormGroup">
+          <form [formGroup]="firstFormGroup">
+            <ng-template matStepLabel>Seleccione el periodo y el tipo de reporte</ng-template>
             <div>
               <mat-card-subtitle>{{ 'GLOBAL.periodo' | translate }}</mat-card-subtitle>
               <mat-form-field [formGroup]="firstFormGroup">
                 <mat-label>{{ 'GLOBAL.periodo' | translate }}:</mat-label>
-                <mat-select formControlName="validatorPeriodo" required>
-                  <mat-option>--{{ 'GLOBAL.seleccionar' | translate }}--</mat-option>
+                <mat-select formControlName="periodo" required>
+                  <mat-option value="" disabled>{{ 'GLOBAL.seleccionar' | translate }}</mat-option>
+                  <mat-option *ngFor="let periodo of periodos" [value]="periodo">{{ periodo }}</mat-option>
                 </mat-select>
               </mat-form-field>
             </div>
-          </div>
+            <div>
+                <mat-card-subtitle>{{ 'GLOBAL.tipo_reporte' | translate }}</mat-card-subtitle>
+                <mat-form-field [formGroup]="firstFormGroup">
+                  <mat-label>{{ 'GLOBAL.tipo_reporte' | translate }}:</mat-label>
+                  <mat-select formControlName="periodo" required>
+                    <mat-option value="" disabled>{{ 'GLOBAL.seleccionar' | translate }}</mat-option>
+                    <mat-option *ngFor="let periodo of periodos" [value]="periodo">{{ periodo }}</mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+            <div>
+              <button mat-stroked-button matStepperNext class="azulOscuro">{{ 'GLOBAL.continuar' | translate }}</button>
+            </div>
+          </form>
+        </mat-step>
   
-          <div class="button-stepper">
-            <!--<button mat-stroked-button matStepperNext class="azulOscuro" (click)="cargarDatos()">{{ 'GLOBAL.continuar' | translate
-            }}</button>-->
-          </div>
+        <!-- Step 2: Facultad -->
+        <mat-step [stepControl]="secondFormGroup">
+          <form [formGroup]="secondFormGroup">
+            <ng-template matStepLabel>{{ 'GLOBAL.facultad' | translate }}</ng-template>
+            <div>
+              <mat-card-subtitle>{{ 'GLOBAL.facultad' | translate }}</mat-card-subtitle>
+              <mat-form-field [formGroup]="secondFormGroup">
+                <mat-label>{{ 'GLOBAL.facultad' | translate }}:</mat-label>
+                <mat-select formControlName="facultad" required>
+                  <mat-option value="" disabled>{{ 'GLOBAL.seleccionar' | translate }}</mat-option>
+                  <mat-option *ngFor="let facultad of facultades" [value]="facultad">{{ facultad }}</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+            <div>
+              <button mat-stroked-button matStepperPrevious class="azulOscuro">{{ 'GLOBAL.atras' | translate }}</button>
+              <button mat-stroked-button matStepperNext class="azulOscuro">{{ 'GLOBAL.continuar' | translate }}</button>
+            </div>
+          </form>
+        </mat-step>
   
-        </mat-card-content>
-      </mat-card>
+        <!-- Step 3: Proyecto -->
+        <mat-step [stepControl]="thirdFormGroup">
+          <form [formGroup]="thirdFormGroup">
+            <ng-template matStepLabel>{{ 'GLOBAL.proyecto_academico' | translate }}</ng-template>
+            <div>
+              <mat-card-subtitle>{{ 'GLOBAL.proyecto_academico' | translate }}</mat-card-subtitle>
+              <mat-form-field [formGroup]="thirdFormGroup">
+                <mat-label>{{ 'GLOBAL.proyecto_academico' | translate }}:</mat-label>
+                <mat-select formControlName="proyecto" required>
+                  <mat-option value="" disabled>{{ 'GLOBAL.seleccionar' | translate }}</mat-option>
+                  <mat-option *ngFor="let proyecto of proyectos" [value]="proyecto">{{ proyecto }}</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+            <div>
+              <ngx-charts-advanced-pie-chart [view]="view" [scheme]="colorScheme" [results]="single"
+                [gradient]="gradient" [legend]="showLegend" [labels]="showLabels" [doughnut]="isDoughnut"
+                (select)="onSelect($event)" (activate)="onActivate($event)" (deactivate)="onDeactivate($event)">
+              </ngx-charts-advanced-pie-chart>
+            </div>
+          </form>
+        </mat-step>
+      </mat-stepper>
+    </mat-card-content>
+  </mat-card>
   
-    </mat-step>
-    <mat-step [stepControl]="secondFormGroup">
-      <ng-template matStepLabel></ng-template>
-  
-      <mat-card>
-        <mat-card-content>
-  
-
-        </mat-card-content>
-      </mat-card>
-  
-    </mat-step>
-  </mat-stepper>
