--- a/src/app/components/asignacion-fechas/asignacion-fechas.component.html
+++ b/src/app/components/asignacion-fechas/asignacion-fechas.component.html
@@ -6,8 +6,6 @@
       <select id="nivelFormacion" [(ngModel)]="nivelFormacion">
         <option value="" disabled selected>Selecciona el nivel de formación</option>
         <option *ngFor="let nivel of niveles" [value]="nivel">{{ nivel }}</option>
-        <option value="pregrado">{{ "asignacion_fechas.pregrado" | translate }}</option>
-        <option value="postgrado">{{ "asignacion_fechas.postgrado" | translate }}</option>
       </select>
     </div>
 
@@ -15,8 +13,7 @@
       <label for="periodoFormacion">{{ "asignacion_fechas.seleccionar_periodo" | translate }}</label>
       <select id="periodoFormacion" [(ngModel)]="periodoFormacion">
         <option value="" disabled selected>Selecciona el período de formación</option>
-        <option value="periodo_1_2020">Periodo 1 del año 2020</option>
-        <option value="periodo_2_2020">Periodo 2 del año 2020</option>
+        <option *ngFor="let periodo of periodos" [value]="periodo.Id">{{ periodo.Nombre }}</option>
       </select>
     </div>
   </div>
